Links to projects repositories added

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <a href="#expertise" class="btn btn-primary mt-5">Mes compétences</a>
             </div>
             <div class="col-12 col-md-6">
-              <img src="img/portrait1.jpg" alt="Lula Jonathan" width="100%" height="500">
+              <img src="img/" alt="Lula Jonathan" width="100%" height="500">
             </div>
           </div>
         </div>
@@ -348,7 +348,7 @@
                   <!-- Offcanvas -->
                   <div class="d-flex flex-column">
                     <button class="btn btn-primary mb-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet1" aria-controls="offcanvasBottom">Voir plus</button>
-                    <a href="" target="_blank" class="btn btn-primary">En savoir plus</a>
+                    <a href="https://github.com/luljn/The-Social-Network" target="_blank" class="btn btn-primary">En savoir plus</a>
                   </div>
                   <div class="offcanvas offcanvas-bottom h-100" tabindex="-1" id="infoprojet1" aria-labelledby="offcanvasBottomLabel">
                     <div class="offcanvas-header">
@@ -417,7 +417,7 @@
                   <!-- Offcanvas -->
                   <div class="d-flex flex-column">
                     <button class="btn btn-primary mb-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet2" aria-controls="offcanvasBottom">Voir plus</button>
-                    <a href="" target="_blank" class="btn btn-primary">En savoir plus</a>
+                    <a href="https://github.com/luljn/The-Social-Network-2.0" target="_blank" class="btn btn-primary">En savoir plus</a>
                   </div>
                   <div class="offcanvas offcanvas-bottom h-100" tabindex="-1" id="infoprojet2" aria-labelledby="offcanvasBottomLabel">
                     <div class="offcanvas-header">
@@ -486,7 +486,7 @@
                   <!-- Offcanvas -->
                   <div class="d-flex flex-column">
                     <button class="btn btn-primary mb-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet3" aria-controls="offcanvasBottom">Voir plus</button>
-                    <a href="" target="_blank" class="btn btn-primary">En savoir plus</a>
+                    <a href="https://github.com/luljn/Itinerary-planner" target="_blank" class="btn btn-primary">En savoir plus</a>
                   </div>
                   <div class="offcanvas offcanvas-bottom h-100" tabindex="-1" id="infoprojet3" aria-labelledby="offcanvasBottomLabel">
                     <div class="offcanvas-header">
@@ -568,7 +568,7 @@
                 </p>
                 <div class="d-flex flex-column">
                   <button class="btn btn-primary mb-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojetStage" aria-controls="offcanvasBottom">Voir plus</button>
-                  <a href="" target="_blank" class="btn btn-primary">En savoir plus</a>
+                  <a href="https://github.com/luljn/IPM-Internship-Project-Manager" target="_blank" class="btn btn-primary">En savoir plus</a>
                 </div>
                 <div class="offcanvas offcanvas-bottom h-100" tabindex="-1" id="infoprojetStage" aria-labelledby="offcanvasBottomLabel">
                   <div class="offcanvas-header">
