--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
                   <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                     <div class="d-flex align-items-center">
                       <i class="fa-solid fa-c fa-2x me-3 text-primary"></i>
-                      <!-- <i class="fab fa-html5 fa-2x"></i> -->
                       <p class="fw-bold m-0">C/C++</p>
                     </div>
                   </div>
@@ -109,24 +108,6 @@
                   </div>
                 </div>
               </div>
-
-              <!-- <div class="mb-3 p-3 bg-white">
-                <div class="row align-items-center">
-                  <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
-                    <div class="d-flex align-items-center">
-                      <i class="fab fa-html5 fa-2x me-3 text-primary"></i>
-                      <p class="fw-bold m-0">C#</p>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="progress">
-                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                        aria-valuemax="100" data-bs-toggle="tooltip" title="75%">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div> -->
   
               <div class="mb-3 p-3 bg-white">
                 <div class="row align-items-center">
@@ -151,7 +132,6 @@
                   <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                     <div class="d-flex align-items-center">
                       <i class="fa-brands fa-java fa-2x me-3 text-primary"></i>
-                      <!-- <i class="fab fa-js "></i> -->
                       <p class="fw-bold m-0">Java</p>
                     </div>
                   </div>
@@ -200,24 +180,6 @@
                   </div>
                 </div>
               </div>
-
-              <!-- <div class="mb-3 p-3 bg-white">
-                <div class="row align-items-center">
-                  <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
-                    <div class="d-flex align-items-center">
-                      <i class="fab fa-sass fa-2x me-3 text-primary"></i>
-                      <p class="fw-bold m-0">TS</p>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="progress">
-                      <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="50%">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div> -->
               
             </div>
             <div class="col-12 offset-md-1 col-md-4">
@@ -237,7 +199,6 @@
                 <div class="row align-items-center">
                   <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                     <div class="d-flex align-items-center">
-                      <!-- <i class="fab fa-figma fa-2x me-3 text-primary"></i> -->
                       <p class="fw-bold m-0">Django</p>
                     </div>
                   </div>
@@ -255,7 +216,6 @@
                 <div class="row align-items-center">
                   <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                     <div class="d-flex align-items-center">
-                      <!-- <i class="fas fa-photo-video fa-2x me-3 text-primary"></i> -->
                       <p class="fw-bold m-0">Flask</p>
                     </div>
                   </div>
@@ -273,7 +233,6 @@
                 <div class="row align-items-center">
                   <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                     <div class="d-flex align-items-center">
-                      <!-- <i class="fas fa-palette fa-2x me-3 text-primary"></i> -->
                       <p class="fw-bold m-0">Angular</p>
                     </div>
                   </div>
@@ -291,7 +250,6 @@
                 <div class="row align-items-center">
                   <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                     <div class="d-flex align-items-center">
-                      <!-- <i class="fas fa-vial fa-2x me-3 text-primary"></i> -->
                       <p class="fw-bold m-0">Bootstrap</p>
                     </div>
                   </div>
@@ -304,27 +262,8 @@
                   </div>
                 </div>
               </div>
-  
-              <!-- <div class="mb-3 p-3 bg-white">
-                <div class="row align-items-center">
-                  <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
-                    <div class="d-flex align-items-center">
-                      <i class="fas fa-video fa-2x me-3 text-primary"></i>
-                      <p class="fw-bold m-0">Vidéo</p>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="progress">
-                      <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="50%">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div> -->
+
             </div>
-            
-            <!-- </div> -->
           </div>
 
         </div>
@@ -360,31 +299,13 @@
                       <div id="carouselProject1" class="carousel slide shadow h-100" data-bs-ride="carousel" data-bs-touch="true">
                         <div class="carousel-inner h-100">
                               <div class="carousel-item h-100 active" data-bs-interval="10000">
-                                  <img src="img/TSN/1.png"
-                                        class="d-block w-100" alt="Image slide 1">
-                                  <!-- <div class="carousel-caption d-none d-md-block">
-                                      <h5>Slide 1</h5>
-                                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
-                                          sollicitudin.</p>
-                                  </div> -->
+                                  <img src="img/TSN/1.png" class="d-block w-100" alt="Image slide 1">
                               </div>
                               <div class="carousel-item h-100" data-bs-interval="2000">
-                                  <img src="img/TSN/2.png"
-                                        class="d-block w-100" alt="Image slide 2">
-                                  <!-- <div class="carousel-caption d-none d-md-block">
-                                      <h5>Slide 2</h5>
-                                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
-                                          sollicitudin.</p>
-                                  </div> -->
+                                  <img src="img/TSN/2.png" class="d-block w-100" alt="Image slide 2">
                               </div>
                               <div class="carousel-item h-100">
-                                  <img src="img/TSN/3.png"
-                                        class="d-block w-100" alt="Image slide 3">
-                                  <!-- <div class="carousel-caption d-none d-md-block">
-                                      <h5>Slide 3</h5>
-                                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
-                                          sollicitudin.</p>
-                                  </div> -->
+                                  <img src="img/TSN/3.png" class="d-block w-100" alt="Image slide 3">
                               </div>
                           </div>
                           <button class="carousel-control-prev" type="button"
@@ -429,31 +350,13 @@
                       <div id="carouselProject2" class="carousel slide shadow h-100" data-bs-ride="carousel" data-bs-touch="true">
                         <div class="carousel-inner h-100">
                               <div class="carousel-item h-100 active" data-bs-interval="10000">
-                                  <img src="img/TSN-2.0/3.png"
-                                        class="d-block w-100" alt="Image slide 1">
-                                  <!-- <div class="carousel-caption d-none d-md-block">
-                                      <h5>Slide 1</h5>
-                                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
-                                          sollicitudin.</p>
-                                  </div> -->
+                                  <img src="img/TSN-2.0/3.png" class="d-block w-100" alt="Image slide 1">
                               </div>
                               <div class="carousel-item h-100" data-bs-interval="2000">
-                                  <img src="img/TSN-2.0/2.png"
-                                        class="d-block w-100" alt="Image slide 2">
-                                  <!-- <div class="carousel-caption d-none d-md-block">
-                                      <h5>Slide 2</h5>
-                                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
-                                          sollicitudin.</p>
-                                  </div> -->
+                                  <img src="img/TSN-2.0/2.png" class="d-block w-100" alt="Image slide 2">
                               </div>
                               <div class="carousel-item h-100">
-                                  <img src="img/TSN-2.0/4.png"
-                                        class="d-block w-100" alt="Image slide 3">
-                                  <!-- <div class="carousel-caption d-none d-md-block">
-                                      <h5>Slide 3</h5>
-                                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
-                                          sollicitudin.</p>
-                                  </div> -->
+                                  <img src="img/TSN-2.0/4.png" class="d-block w-100" alt="Image slide 3">
                               </div>
                           </div>
                           <button class="carousel-control-prev" type="button"
@@ -498,30 +401,16 @@
                       <div id="carouselProject3" class="carousel slide shadow h-100" data-bs-ride="carousel" data-bs-touch="true">
                         <div class="carousel-inner h-100">
                               <div class="carousel-item h-100 active" data-bs-interval="10000">
-                                  <img src="img/IP/1.png"
-                                        class="d-block w-100" alt="Image slide 1">
-                                  <!-- <div class="carousel-caption d-none d-md-block">
-                                      <h5>Slide 1</h5>
-                                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
-                                          sollicitudin.</p>
-                                  </div> -->
+                                  <img src="img/IP/1.png" class="d-block w-100" alt="Image slide 1">
                               </div>
                               <div class="carousel-item h-100" data-bs-interval="2000">
-                                  <img src="img/IP/2.png"
-                                        class="d-block w-100" alt="Image slide 2">
+                                  <img src="img/IP/2.png" class="d-block w-100" alt="Image slide 2">
                                   <div class="carousel-caption d-none d-md-block">
-                                      <!-- <h5>Slide 2</h5>
-                                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
-                                          sollicitudin.</p> -->
                                   </div>
                               </div>
                               <div class="carousel-item h-100">
-                                  <img src="img/IP/3.png"
-                                        class="d-block w-100" alt="Image slide 3">
+                                  <img src="img/IP/3.png" class="d-block w-100" alt="Image slide 3">
                                   <div class="carousel-caption d-none d-md-block">
-                                      <!-- <h5>Slide 3</h5>
-                                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
-                                          sollicitudin.</p> -->
                                   </div>
                               </div>
                           </div>
@@ -580,30 +469,16 @@
                     <div id="carouselProjectStage" class="carousel slide shadow h-100" data-bs-ride="carousel" data-bs-touch="true">
                       <div class="carousel-inner h-100">
                             <div class="carousel-item h-100 active" data-bs-interval="10000">
-                                <img src="img/IPM/2.png"
-                                      class="d-block w-100" alt="Image slide 1">
-                                <!-- <div class="carousel-caption d-none d-md-block">
-                                    <h5>Slide 1</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
-                                        sollicitudin.</p>
-                                </div> -->
+                                <img src="img/IPM/2.png" class="d-block w-100" alt="Image slide 1">
                             </div>
                             <div class="carousel-item h-100" data-bs-interval="2000">
-                                <img src="img/IPM/3.png"
-                                      class="d-block w-100" alt="Image slide 2">
+                                <img src="img/IPM/3.png" class="d-block w-100" alt="Image slide 2">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <!-- <h5>Slide 2</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
-                                        sollicitudin.</p> -->
                                 </div>
                             </div>
                             <div class="carousel-item h-100">
-                                <img src="img/IPM/4.png"
-                                      class="d-block w-100" alt="Image slide 3">
+                                <img src="img/IPM/4.png" class="d-block w-100" alt="Image slide 3">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <!-- <h5>Slide 3</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
-                                        sollicitudin.</p> -->
                                 </div>
                             </div>
                         </div>
@@ -636,9 +511,6 @@
           <h3 class="fw-light fs-5 mx-1 my-3">N'hésitez pas à me contacter.</h3>
 
           <div class="row gy-4 mt-5">
-            <!-- <div class="col-12 col-md-5">
-              <img src="img/" alt="..." width="100%">
-            </div> -->
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
               <button class="btn btn-primary btn-block" onclick="openMailClient()">Envoyer un mail</button>
             </div>
