--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             <!-- TSN -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
               <div class="card">
-                <img src="img/TSN/4.png" width="150" height="150" class="card-img-top px-2 py-2" alt="projet 1">
+                <img src="img/TSN/4.png" width="50%" height="50%" class="card-img-top px-2 py-2" alt="projet 1">
                 <div class="card-body">
                   <h5 class="card-title">The Social Network</h5>
                   <p class="card-text my-4">
@@ -329,7 +329,7 @@
             <!-- TSN-2.0 -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
               <div class="card">
-                <img src="img/TSN-2.0/1.png" width="150" height="150" class="card-img-top px-2 py-2" alt="projet 2">
+                <img src="img/TSN-2.0/1.png" width="50%" height="50%" class="card-img-top px-2 py-2" alt="projet 2">
                 <div class="card-body">
                   <h5 class="card-title">The Social Network - 2.0</h5>
                   <p class="card-text my-4">
@@ -380,7 +380,7 @@
             <!-- Itinerary planner -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
               <div class="card">
-                <img src="img/IP/logoBelfort.gif" width="150" height="150" class="card-img-top px-2 py-2" alt="projet 3">
+                <img src="img/IP/logoBelfort.gif" width="150" height="200" class="card-img-top px-2 py-2" alt="projet 3">
                 <div class="card-body">
                   <h5 class="card-title">Itinerary planner</h5>
                   <p class="card-text my-4">
@@ -449,7 +449,7 @@
           <div class="d-flex justify-content-center align-items-center">
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card">
-              <img src="img/IPM/1.png" width="150" height="150" class="card-img-top px-2 py-2" alt="image IPM">
+              <img src="img/IPM/1.png" width="50%" height="50%" class="card-img-top px-2 py-2" alt="image IPM">
               <div class="card-body">
                 <h5 class="card-title">Internship-Project-Manager</h5>
                 <p class="card-text my-4">
