Personnal image changed

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <a href="#expertise" class="btn btn-primary mt-5">Mes compétences</a>
             </div>
             <div class="col-12 col-md-6">
-              <img src="img/" alt="Lula Jonathan" width="100%" height="500">
+              <img src="img/portrait2.jpg" alt="Lula Jonathan" width="100%">
             </div>
           </div>
         </div>
