--- a/index.html
+++ b/index.html
@@ -442,9 +442,11 @@
           <h2 class="mb-1">Expérience</h2>
           <div class="row">
           <div class="col-12 text-center my-5">
-            <h3>ICCSOFT</h3>
+            <h5>ICCSOFT</h5>
             <br>
-            <h3>Stagiaire en développement logiciel</h3>
+            <h5>Mai 2023 - Juin 2023</h5>
+            <br>
+            <h5>Stagiaire en développement logiciel</h5>
           </div>
           <div class="d-flex justify-content-center align-items-center">
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
