--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
               <h2>Développeur logiciel</h2>
               <h2>Étudiant-ingénieur en informatique</h2>
               <h2 class="fw-light">Bienvenue sur mon portfolio</h2>
-              <a href="#expertise" class="btn btn-primary mt-5">Mes compétences</a>
+              <div class="mt-5">
+                <a href="#expertise" class="btn btn-primary">Mes compétences</a>
+                <button class="btn btn-primary">Télécharger mon CV</button>
+              </div>
             </div>
             <div class="col-12 col-md-6">
               <img src="img/portrait2.jpg" alt="Lula Jonathan" width="100%">
@@ -333,7 +336,7 @@
                 <div class="card-body">
                   <h5 class="card-title">The Social Network - 2.0</h5>
                   <p class="card-text my-4">
-                   Le réseau social "The Social Network" développé avec des technologies web avancées (Framework, API).
+                    Le réseau social "The Social Network" développé avec des technologies web avancées (Framework, API).
                   </p>
                   <!-- Offcanvas -->
                   <div class="d-flex flex-column">
@@ -514,7 +517,7 @@
 
           <div class="row gy-4 mt-5">
             <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-              <button id="sendEmailButton" class="btn btn-primary btn-block">Envoyer un mail</button>
+              <button id="sendEmailButton" class="btn btn-primary btn-block">Envoyer un e-mail</button>
             </div>
           </div>
         </div>
