--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <h2 class="fw-light">Bienvenue sur mon portfolio</h2>
               <div class="mt-5">
                 <a href="#expertise" class="btn btn-primary">Mes compétences</a>
-                <button class="btn btn-primary">Télécharger mon CV</button>
+                <button id="downloadButton" class="btn btn-primary">Télécharger mon CV</button>
               </div>
             </div>
             <div class="col-12 col-md-6">
@@ -123,7 +123,7 @@
                   <div class="col">
                     <div class="progress">
                       <div class="progress-bar w-75" role="progressbar" aria-valuenow="50" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="">
+                          aria-valuemax="100" data-bs-toggle="tooltip" title="">
                       </div>
                     </div>
                   </div>
@@ -141,7 +141,7 @@
                   <div class="col">
                     <div class="progress">
                       <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="">
+                          aria-valuemax="100" data-bs-toggle="tooltip" title="">
                       </div>
                     </div>
                   </div>
@@ -159,7 +159,7 @@
                   <div class="col">
                     <div class="progress">
                       <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="">
+                          aria-valuemax="100" data-bs-toggle="tooltip" title="">
                       </div>
                     </div>
                   </div>
@@ -208,7 +208,7 @@
                   <div class="col">
                     <div class="progress">
                       <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="">
+                          aria-valuemax="100" data-bs-toggle="tooltip" title="">
                       </div>
                     </div>
                   </div>
@@ -225,7 +225,7 @@
                   <div class="col">
                     <div class="progress">
                       <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="">
+                          aria-valuemax="100" data-bs-toggle="tooltip" title="">
                       </div>
                     </div>
                   </div>
@@ -242,7 +242,7 @@
                   <div class="col">
                     <div class="progress">
                       <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="">
+                          aria-valuemax="100" data-bs-toggle="tooltip" title="">
                       </div>
                     </div>
                   </div>
@@ -259,7 +259,7 @@
                   <div class="col">
                     <div class="progress">
                       <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="">
+                          aria-valuemax="100" data-bs-toggle="tooltip" title="">
                       </div>
                     </div>
                   </div>
@@ -587,6 +587,7 @@
     <!-- JS -->
     <script src="js/tooltips.js"></script>
     <script src="js/sendMail.js"></script>
+    <script src="js/downloadCV.js"></script>
         
   </body>
 
