--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               </div>
             </div>
             <div class="col-12 col-md-6">
-              <img src="img/portrait2.jpg" alt="Lula Jonathan" width="100%">
+              <img src="img/portrait2.jpg" alt="Lula Jonathan" width="100%" class="rounded-4">
             </div>
           </div>
         </div>
