--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="">
+                      <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" data-bs-toggle="tooltip" title="">
                       </div>
                     </div>
                   </div>
