--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="fr">
 
   <head>
-
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lula Jonathan MBECK MBOH</title>
@@ -443,18 +443,21 @@
         <div class="container">
           <h2 class="mb-1">Expérience</h2>
           <div class="row">
-          <div class="col-12 text-center my-5">
+          <!--div class="col-12 text-center my-5">
             <h5>ICCSOFT</h5>
             <br>
             <h5>Mai 2023 - Juin 2023</h5>
             <br>
             <h5>Stagiaire en développement logiciel</h5>
-          </div>
+          </div-->
           <div class="d-flex justify-content-center align-items-center">
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card">
               <img src="img/IPM/1.png" width="50%" height="50%" class="card-img-top px-2 py-2" alt="image IPM">
               <div class="card-body">
+                <h5>ICCSOFT</h5>
+                <h5>Mai 2023 - Juin 2023</h5>
+                <h5>Stagiaire en développement logiciel</h5>
                 <h5 class="card-title">Internship-Project-Manager</h5>
                 <p class="card-text my-4">
                   Une application web de gestion et de suivi des projets de stage.
