Experience section refactored 1.2

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
               <img src="img/IPM/1.png" width="50%" height="50%" class="card-img-top px-2 py-2" alt="image IPM">
               <div class="card-body">
                 <h5>ICCSOFT</h5>
-                <h5>Mai 2023 - Juin 2023</h5>
+                <h5>Mai 2023 - Juin 2023</h5><br>
                 <h5>Stagiaire en développement logiciel</h5>
                 <h5 class="card-title">Internship-Project-Manager</h5>
                 <p class="card-text my-4">
